Adjust overflow settings: remove fixed height on html/body and test background-attachment to fix double scrollbar issue

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,15 +4,15 @@ body {
     padding: 0;
     font-family: 'Lato';
     box-sizing: border-box;
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     overflow-x: hidden;
 }
 
 .homepage-main {
     background: url('/static/media/images/background-image.jpg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-size: cover;
     background-position: center;
     overflow-x: hidden;
